--- a/C#/SolarLunarName/SolarLunarName.Forms/MainPage.xaml
+++ b/C#/SolarLunarName/SolarLunarName.Forms/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:SolarLunarName"
-             x:Class="SolarLunarName.MainPage">
+             xmlns:local="clr-namespace:SolarLunarName.Forms"
+             x:Class="SolarLunarName.Forms.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
