Add form elements and wire up first

--- a/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
@@ -5,3 +5,5 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
 @import '~bulma/bulma.sass';
+
+@import "~bulma-calendar/calendar.sass";
