--- a/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
@@ -7,3 +7,49 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
 @import '~bulma/bulma.sass';
 
 @import "~bulma-calendar/calendar.sass";
+
+
+
+.title {
+    font-family: 'Montserrat', sans-serif;
+}
+body {
+    font-family: 'Monoton', cursive;
+    background-image: url(/assets/background.jpg);
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    overflow:hidden;
+
+}
+.circle-container{
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
+	justify-content: center;
+	align-items: center;
+	top:0;
+	left:0;
+	background: radial-gradient(circle, rgba(0,0,0,.1) 60%, rgb(0, 0, 0) );
+}
+.circle{
+    transform: rotate(20deg);
+    top: 40vh;
+    display: flex;
+}
+.semi-circle{
+    width: 80vh;
+    height: 160vh;
+}  
+.semi-circle.dark {
+    border-top-left-radius: 80vh;
+    border-bottom-left-radius: 80vh;
+	background: linear-gradient( to right, rgb(0, 0, 0), rgba(4, 4, 4,.1) );
+}
+.semi-circle.light {
+    border-top-right-radius: 80vh;
+    border-bottom-right-radius: 80vh;
+    background-color: yellow;
+	background: linear-gradient( to right, rgba(255, 156, 1, 0.1), rgba(238, 217, 47, .7 ));
+}
