--- a/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
@@ -21,22 +21,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
+    padding:0;
+    margin:0;
+}
+.wrapper{
     background-image: url(/assets/background.jpg);
     background-size: cover;
+    position: fixed;
     height: 100vh;
     width: 100vw;
-    overflow:hidden;
 }
 .circle-container{
+    overflow: hidden;
     position: fixed;
     display: flex;
-    width: 100%;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 	justify-content: center;
 	align-items: center;
 	top:0;
 	left:0;
-	background: radial-gradient(circle, rgba(0,0,0,.1) 60%, rgb(0, 0, 0) );
+    background: radial-gradient(circle, rgba(0,0,0,.1) 60%, rgb(0, 0, 0) );
 }
 .circle{
     transform: rotate(20deg);
@@ -46,7 +51,7 @@ body {
 .semi-circle{
     width: 80vh;
     height: 160vh;
-}  
+}
 .semi-circle.dark {
     border-top-left-radius: 80vh;
     border-bottom-left-radius: 80vh;
