Add updated date converter

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -7,5 +7,10 @@
                 </a>
             </div>
         {% endfor %}
+            <div class="navbar-item">
+                <a href="{{ 'tool' | relative_url }}">
+                    <strong>Date Convertion Tool</strong>
+                </a>
+            </div>
     </div>
 </nav>
