--- a/docs/_includes/hero.html
+++ b/docs/_includes/hero.html
@@ -1,7 +1,7 @@
 <section class="hero is-medium">
     <div class="hero-body">
         <div class="container">
-        <h1 class="title has-text-white">
+        <h1 class="title has-text-white is-1 is-size-3-mobile">
             {{site.title}}
         </h1>
         <h2 class="subtitle has-text-white">
