--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,14 +1,14 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-end">
+    <div class="navbar-start">
         {% for page in site.html_pages%}
             <div class="navbar-item">
-                <a href="{{ page.url | relative_url }}">
+                <a href="{{ page.url | relative_url }}" class="has-text-dark">
                     <strong>{{ page.title }}</strong>
                 </a>
             </div>
         {% endfor %}
             <div class="navbar-item">
-                <a href="{{ 'tool' | relative_url }}">
+                <a href="{{ 'tool' | relative_url }}" class="has-text-dark">
                     <strong>Date Convertion Tool</strong>
                 </a>
             </div>
