--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon-16x16.ico" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css2?family=Monoton&amp;family=Montserrat&amp;display=swap" rel="stylesheet">
     <link href="{{'/assets/css/bulma.min.css' | relative_url }}" rel="stylesheet">
-    <link href="{{'/assets/css/style.css' | relative_url }}" rel="stylesheet">
+    <link href="{{'/assets/css/template-style.css' | relative_url }}" rel="stylesheet">
     
 </head>
 <body>
