--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Monoton&amp;family=Montserrat&amp;display=swap" rel="stylesheet">
     <link href="{{'/assets/css/bulma.min.css' | relative_url }}" rel="stylesheet">
     <link href="{{'/assets/css/template-style.css' | relative_url }}" rel="stylesheet">
-    
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
     {% include hero.html %}
