--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,7 +1,13 @@
 <footer class="footer">
-    <div class="content has-text-centered">
+    <div class="has-text-centered">
       <p>
         Craig Chamberlain
+        <ul class="icons">
+          <li><a href="https://twitter.com/hagatorn" class="icon" target="_blank" alt="Twitter"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://github.com/CraigChamberlain" class="icon" target="_blank" alt="Github"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://stackoverflow.com/users/3822155" class="icon" target="_blank" alt="stackoverflow"><i class="fab fa-stack-overflow"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/craig-chamberlain-61037149/" class="icon" target="_blank" alt="linkedin"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
       </p>
     </div>
   </footer>
