--- a/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
@@ -106,3 +106,55 @@ dd, dt {
     border: 1px solid $grey-light;
     padding: 2px 5px;
 }
+
+.result .panel-block {
+    position: relative;
+}
+
+.loading {
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    position: absolute;
+    opacity: .4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.lds-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    z-index: 1;
+
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid $dark;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: $dark transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
