--- a/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/scss/main.scss
@@ -157,4 +157,22 @@ dd, dt {
       transform: rotate(360deg);
     }
   }
-  
+.navbar {padding-top: 1em;
+    background-color: transparent;
+    a { color: grey;
+        width: 75px;
+        height:75px;
+        border-radius: 38px;
+        border: solid grey 2px;
+        font-size: 17px;
+        text-align: center;
+        font-weight: bolder;
+        background: radial-gradient(circle, rgba(0, 0, 0, 0.1) 10%, black)
+    }
+    a:hover {
+        background: radial-gradient(circle, rgba(0, 0, 0, 0.1) 30%, black);
+        border: solid  rgba(255, 255, 255, 0.6) 2px;
+        color: grey;
+        text-shadow: 1px 2px black;
+    }
+}
